style(NumbersTest): 인수가 하나인 매개변수는 List 생성자로 생성